# Readability-Features

./: pyproject.toml
code/: data_prep.ipynb  model.py  prediction.ipynb  snips.csv
