[tool.poetry]
name = "readability-features-my"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "readability_features"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.22.0"
tensorflow-macos = "^2.12.0"
tensorflow-metal = "^0.8.0"
opencv-python = "^4.7.0.72"
sklearn = "^0.0.post5"
transformers = "^4.29.2"
scikit-learn = "^1.2.2"
keras = "^2.12.0"
keras-preprocessing = "^1.1.2"
jupyter = "^1.0.0"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

